1998-07-15  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, proto.c, samples.c, test-script:
	almost got it all on irix.  still need to tweak sample caching 
	problems. other than that. tried to filter out the esdctl calls
	from test-script, as it doesn't work properly with an ESPEAKER set.

	* esd-server.h, players.c, proto.c: finally got the client state
	code to track endian status correctly, on linux and irix.  gross
	macros to track communication protocol level data. need to filter
	those out via cmd line macro at some point...

1998-07-13  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.h, players.c, proto.c:
	crack one at including communication level diagnostic info.

1998-07-11  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, esd.c, mix.c, players.c, proto.c, samples.c:
	tried to enforce some semblance of order on the trace/debug messages.
	added globals esdbg_trace, and esdbg_comms, for debug msg filtering.

1998-07-07  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdlib.c (esd_open_sound): *always* consider an "else" clause
	for every "if"...	

1998-07-05  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esdsample.c, esdlib.c: added a confirmation step to the
	sample_cache mechanism.  esd_confirm_sample_cache(esd)
	should return the same sample id as the sample just cached.
	esdlib failed to read this indication back from the server.

	* esd-server.h, esdlib.c, players.c, proto.c, samples.c:
	more endian swapping fixes. works for Linux, half of it
	works irix->linux, much seems to be broken on irix. added
	test-script for quick run through of features.

1998-07-04  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.h, esdlib.c, players.c, proto.c, samples.c,
	woo! the endian swapping detection is in place, and works, at
	least for byte streams.  still need translation functions in
	the mix logic, to byte swap data buffers before addition.

1998-07-04  Yo Ric Dude  <ericmit@ix.netcom.com>
